Index.html contact section edited

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Room Finder </title>
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
 
 
 </head>
@@ -131,19 +132,23 @@
     </div>
 
 
-    <p1 class="h3" style="color:rgb(133, 132, 130)" >
-        Follow us 
-    </p1>
-    <div>
-        <a href="https://www.facebook.com/profile.php?id=100078933752322"><img class="facebook" src="facebook.png"></a>
-    </div>
-    <div>
-        <a href="#"><img class="whatsapp" src="whatsapp.png"></a>
-    </div>
-    <div>
-        <a href="https://discord.com/channels/849002332507340820/849002332507340823"><img class="discord"
-            src="discord.png"></a>
+    <section>
+        <div class="contact-us">
+            <div class="title">
+                <p>CONTACT US</p>
+            </div>
         </div>
+
+    </section>
+
+
+
+
+
+
+
+
+
         <div class="termscondition">
             Quick links    </div>
             <a href="index.html" class="home1">Home</a>
